--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
+    <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">NEXT</a>
+            <a href="/" id="navbar__logo"> <i class="fas fa-gem"></i>NEXT</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -32,6 +34,7 @@
             </ul>
         </div>
     </nav>
+    
     <script src="app.js"></script>
 </body>
 </html>
