--- a/tech.html
+++ b/tech.html
@@ -42,13 +42,13 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THIS IS THE TECH PAGE</h1>
+                <h1>TECH PAGE</h1>
                 <h2>TECHNOLOGY</h2>
                 <p>See what makes us different.</p>
                 <button class="main__btn"><a href="/">Get Started</a></button>
             </div>
             <div class="main__img--container">
-                <img src="images/pic2.svg" alt="pic" id="main__img">
+                <img src="images/pic2.jpg" alt="pic" id="main__img">
             </div>
         </div>
     </div>
